--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -1,6 +1,37 @@
 # The name of the service and pods/deployment/etc being deployed
 name: volume-autoscaler
 
+# The typical config variables for the volume-autoscaler service, and their respective defaults
+
+# This is how we we can deploy this chart to a different namespace (or cluster) than Prometheus, by telling it where to access Prometheus
+#   Eg: http://prometheus-server.namespace.svc.cluster.local.  This can be auto-detected if run in the same namespace as prometheus
+# This is also how you can run this script remotely (eg: on your local machine to develop this tool against an remote Prometheus server)
+prometheus_url: ""
+# This is how we confiure the Slack integration, set the two values below
+slack_webhook_url: "REPLACEME"
+slack_channel: "REPLACEME"
+# Our scan interval
+interval_time: "60"
+# How many scan intervals in alert before scaling
+scale_after_intervals: "5"
+# How much full the disk must be before considering scaling
+scale_above_percent: "80"
+# How much to scale disks up by, as a percentage of their current size
+scale_up_percent: "50"
+# An minimum amount of bytes to scale up by (typically because providers like AWS only support 1GB increments in disk size)
+scale_up_min_increment: "1000000000"
+# An maximum amount of bytes to scale up by (helps prevent large disks from growing too fast/exponentially).  Set to 16TB by default, which basically means this is disabled
+scale_up_max_increment: "16000000000000"
+# The maximum size of disks to scale up to.  By default on AWS using EBS volumes this is set to 16TB as that is the EBS Max disk size.
+scale_up_max_size: "16000000000000"
+# How long to wait inbetween scaling activities.  AWS restricts you to one resize per-disk per 6 hour period, so this is 6 hours plus 10 minutes (as a buffer)
+scale_cooldown_time: "22200"
+# Set this to "true" to only print what it would have done, it will not send Slack messages either if you enable this
+dry_run: ""
+# What label selector to query on prometheus to limit the volumes you wish to use.  For example set this to "namespace=\"production\"" to limit to PVCs in production namespace
+prometheus_label_match: ""
+http_timeout: "15"
+
 # Number of pods in deployment, we only support 1 running
 replicaCount: 1
 
@@ -14,15 +45,56 @@ image:
   tag: latest  # This should be replaced with an semver tag release automatically during CI for releases
 
 globalEnvs:
+  ####################################
+  # !!! Note: You don't need to do anything in here, please set the values at the top of this file instead
+  ####################################
+
+  # This is how we we can deploy this chart to a different namespace (or cluster) than Prometheus, by telling it where to access Prometheus
+  - name: PROMETHEUS_URL
+    value: "{{ default "" .Values.prometheus_url }}"
+
   # This is how we confiure the Slack integration, set the two values below
   - name: SLACK_WEBHOOK_URL
-    value: "{{ .Values.slack_webhook_url }}"
+    value: "{{ default "REPLACEME" .Values.slack_webhook_url }}"
   - name: SLACK_CHANNEL
-    value: "{{ .Values.slack_channel }}"
-  # This is how we we can deploy this chart to a different namespace than Prometheus, by telling it where to access Prometheus
-  #   Eg: http://prometheus-server.namespace.svc.cluster.local
-  - name: PROMETHEUS_URL
-    value: "{{ .Values.prometheus_url }}"
+    value: "{{ default "REPLACEME" .Values.slack_channel }}"
+
+  # Our scan interval
+  - name: INTERVAL_TIME
+    value: "{{ default "60" .Values.interval_time }}"
+  # How many scan intervals in alert before scaling
+  - name: SCALE_AFTER_INTERVALS
+    value: "{{ default "5" .Values.scale_after_intervals }}"
+
+  # How much full the disk must be before considering scaling
+  - name: SCALE_ABOVE_PERCENT
+    value: "{{ default "80" .Values.scale_above_percent }}"
+
+  # How much to scale disks up by, as a percentage of their current size
+  - name: SCALE_UP_PERCENT
+    value: "{{ default "50" .Values.scale_up_percent }}"
+
+  # An minimum amount of bytes to scale up by (typically because providers like AWS only support 1GB increments in disk size)
+  - name: SCALE_UP_MIN_INCREMENT
+    value: "{{ default "1000000000" .Values.scale_up_min_increment }}"
+  # An maximum amount of bytes to scale up by (helps prevent large disks from growing too fast/exponentially).  Set to 16TB by default, which basically means this is disabled
+  - name: SCALE_UP_MAX_INCREMENT
+    value: "{{ default "16000000000000" .Values.scale_up_max_increment }}"
+  # The maximum size of disks to scale up to.  By default on AWS using EBS volumes this is set to 16TB as that is the EBS Max disk size.
+  - name: SCALE_UP_MAX_SIZE
+    value: "{{ default "16000000000000" .Values.scale_up_max_size }}"
+  # How long to wait inbetween scaling activities.  AWS restricts you to one resize per-disk per 6 hour period, so this is 6 hours plus 10 minutes (as a buffer)
+  - name: SCALE_COOLDOWN_TIME
+    value: "{{ default "22200" .Values.scale_cooldown_time }}"
+  # Set this to "true" to only print what it would have done, it will not send Slack messages either if you enable this
+  - name: DRY_RUN
+    value: "{{ default "" .Values.dry_run }}"
+  # What label selector to query on prometheus to limit the volumes you wish to use.  For example set this to "namespace=\"production\"" to limit to PVCs in production namespace
+  - name: PROMETHEUS_LABEL_MATCH
+    value: "{{ default "" .Values.prometheus_label_match }}"
+  # How long to wait for Prometheus and Kubernetes to get back to us for all API calls
+  - name: HTTP_TIMEOUT
+    value: "{{ default "15" .Values.http_timeout }}"
 
 # Additional pod annotations
 podAnnotations: {}
