Missing values in helm chart values

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -162,7 +162,11 @@ volumeMounts: []
 # We use a service so we can have prometheus metrics
 service:
   enabled: true
+  type: ClusterIP
+  port: 80
   targetPort: 8000
+  name: default-service
+  additionalPorts: []
   annotations:
     prometheus.io/scrape: 'true'
 
