Adding slack prefix and support

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -10,6 +10,9 @@ prometheus_url: ""
 # This is how we confiure the Slack integration, set the two values below
 slack_webhook_url: "REPLACEME"
 slack_channel: "REPLACEME"
+# Our slack message prefix and suffix.  Optional, can use to help distinguish between different clusters or to alert someone
+slack_message_prefix: ""
+slack_message_suffix: ""
 # Our scan interval
 interval_time: "60"
 # How many scan intervals in alert before scaling
@@ -59,11 +62,15 @@ globalEnvs:
   - name: PROMETHEUS_URL
     value: "{{ .Values.prometheus_url }}"
 
-  # This is how we confiure the Slack integration, set the two values below
+  # This is how we confiure the Slack integration, set the values below
   - name: SLACK_WEBHOOK_URL
     value: "{{ .Values.slack_webhook_url }}"
   - name: SLACK_CHANNEL
     value: "{{ .Values.slack_channel }}"
+  - name: SLACK_MESSAGE_PREFIX
+    value: "{{ .Values.slack_message_prefix }}"
+  - name: SLACK_MESSAGE_SUFFIX
+    value: "{{ .Values.slack_message_suffix }}"
 
   # Our scan interval
   - name: INTERVAL_TIME
