--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,11 +2,8 @@ name: Docker Image CI
 
 on:
   push:
-    branches:
-      - master
-      - fixing-vulnerabilities-september-2023
-    tags:
-      - "*"
+    branches: [ "*" ]
+    tags: [ "*" ]
 
 jobs:
   build:
